Fixes dropdown toggle on iOS, attempts to fix logo on Windows Phone

--- a/less/widget-navigation.less
+++ b/less/widget-navigation.less
@@ -2,16 +2,6 @@
 // navigation
 // ----------
 
-// Parent nav items, adds arrow icon
-.item-name--parent:after {
-	display: inline-block;
-	vertical-align: middle;
-	content: "";
-	margin-left: 4px;
-	border: 5px solid transparent;
-	border-top-color: @color-swatch6;
-}
-
 // Hide toggle on desktop
 .navigation-toggle {
 	display: none;
@@ -46,6 +36,7 @@
 
 // Sets nav items to full width on mobile and tablet
 .navigation-item {
+	cursor: pointer;
 	&:hover,
 	&.selected {
 		background-color: @font-swatch6-background-color-hover;
@@ -64,9 +55,13 @@
 }
 
 // Dropdown parent arrow
-.item-name--parent:after {
-	border: none;
-	font-family: 'FontAwesome', sans-serif;
-	content: "\f107";
-	font-size: 1rem;
+.item-name--parent {
+	&:after {
+		vertical-align: middle;
+		margin-left: 4px;
+		border: none;
+		font-family: 'FontAwesome', sans-serif;
+		content: "\f107";
+		font-size: 1rem;
+	}
 }
