--- a/stylesheet.less
+++ b/stylesheet.less
@@ -150,6 +150,7 @@ textarea {
 
 .logo {
 	line-height: 0;
+	width: 100%;
 }
 
 .company-link {
